--- a/CC/CM/1.md
+++ b/CC/CM/1.md
@@ -1,4 +1,6 @@
-# Complexité algorithmique - 1
+# CC 1 - Notions de base sur les graphes
+
+CC ou Complexité algorithmique
 
 Responsable : <Valentin.Gledel@univ-grenoble-alpes.fr>?
 
