--- a/CC/CM/3.md
+++ b/CC/CM/3.md
@@ -1,4 +1,4 @@
-# Complexité algorithmique - 3
+# CC 3 - Arbres et graphes eulériens/hamiltoniens
 
 ## Graphes eulériens et hamiltoniens
 
@@ -59,4 +59,3 @@ Pour un arbre $$T$$ de racine $$r$$ :
 - La **hauteur** $$h(T)$$ de l’arbre $$T$$ est la longueur de la plus longue chaîne de la racine à une feuille.
 - La **profondeur d’un sommet** est la distance du sommet à la racine
 - La profondeur d’un arbre est la plus grande profondeur d’un sommet = **hauteur de l’arbre**
-
