--- a/CC/CM/4.md
+++ b/CC/CM/4.md
@@ -1,4 +1,4 @@
-# Complexité algorithmique - 4
+# CC 4 - MST et graphes bipartis
 
 ## Arbres couvrants de poids minimum
 
@@ -68,7 +68,3 @@ Colorations particulières :
 - $$\omega(G) < \chi(G) = \Delta(G) + 1$$ : cycles impairs
 - $$\omega(G) < \chi(G) < \Delta(G) + 1$$ : cycle impair + un nœud relié
 - $$\omega(G) = \chi(G) = \Delta(G) + 1$$ : graphes complets
-
-
-
-.
