--- a/CC/CM/5.md
+++ b/CC/CM/5.md
@@ -1,4 +1,4 @@
-# Complexité algorithmique - 5
+# CC 5 - MST (suite) et poids positifs
 
 ## Arbres couvrants de poids minimum
 
@@ -41,7 +41,7 @@ Chemins *(voir feuille d'exercices)* :
 - Plus long chemin
 - Plus sûrs chemins (logarithme des poids)
 
-### Poids Positifs
+### Poids positifs
 
 #### Algorithme de Dijkstra
 
@@ -56,7 +56,3 @@ Comment coder **efficacement** l’algorithme de Dijkstra ? = Comment enlever ra
 - Algorithme de **Bellman** : pas de circuit
 - Algorithmes de **Dijkstra** : poids ou coûts positifs, garantit qu'il n'y a pas de cycle négatif
 - Algorithme de **Bellman-Ford** : caractérisation des graphes orientés pondérés sans circuit absorbant.
-
-
-
-.
