--- a/II/CM/1.md
+++ b/II/CM/1.md
@@ -1,4 +1,4 @@
-# Ingénierie Intéraction Homme Machine (IHM) - 1
+# II 1 - Intéraction
 
 ## 0. Présentation du cours
 
@@ -24,7 +24,7 @@ Distance sémantique / articulatoire
 
 **Intéraction.** Action/Influence réciproque entre plusieurs objets.
 
-**IIHM.** Étude : conception, mise en œuvre, évaluation. Pluridisciplinaire : ingénierie, facteurs humains, design. À fort enjeu.
+**IIHM.** Ingénierie Intéraction Homme Machine : conception, mise en œuvre, évaluation. Pluridisciplinaire : ingénierie, facteurs humains, design. À fort enjeu.
 
 **Ergonomie.** Étude scientifique de la relation entre l'Homme et ses moyens, méthodes et milieux de travail.
 
