--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -1,4 +1,4 @@
-# Ingénierie Intéraction Homme Machine (IHM) - 2
+# II 2 - Principes de développement et architecture
 
 Slide : <http://iihm.imag.fr/blanch/INFO4/IHM/cours/1-evenements.pdf>
 
@@ -80,7 +80,7 @@ class Interaction implements EventHandler<MouseEvent> {
 }
 ```
 
-## 1. Elements d'architectures
+## 1. Éléments d'architecture
 
 **Architecture.** Séparer l'interface utilisateur
 
@@ -110,7 +110,3 @@ Le NF doit offrir des **services nécessaires** à l’interaction :
 - l’annulation
 
 > *Polling* l'IU "tire" l'information du NF à intervalles réguliers à l'aide d'une boucle et d'un délai pour les notifications.
-
-
-
-.
