--- a/LT/CM/1.md
+++ b/LT/CM/1.md
@@ -1,4 +1,4 @@
-# Langages et Traducteurs - I
+# LT 1 - Introduction à Coq
 
 ## 0. Informations
 
@@ -25,4 +25,130 @@ CM/TP + TD/TP
 ```coq
 x := 2 + 7
 let f = fun z >> x + z
+```
+
+## 2. Règles de déduction
+
+```text
+prémisses
+----------
+conclusion
+```
+
+### Motivations
+
+Format universel :
+
+- Règles de sémantique, comment fonctionne un langage de programmation
+  - s'exécute
+  - typage
+- Règles de raisonnement (logique)
+- Structures de données
+- Programmes fonctionnels
+
+### Vocabulaire
+
+- Sémantique fonctionnelle *(TD)*
+- Sémantique opérationnelle *(plus tard)*
+- Grand pas
+- Petit pas
+
+### Exemple d'arbre de preuve par dérivation
+
+- Au-dessus : hypothèses
+- En bas : conclusion
+- Points : justificatifs
+
+```text
+      P    X       Y
+_.    -.   ---------.
+A     B        D
+---------------- justificatif
+      C
+```
+
+### Logique propositionnelle et les prédicats
+
+**Environnement.** Ensemble des hypothèses
+
+Deux types de règles possibles :
+
+- Introduction : pour conclure
+- Elimination : pour utiliser
+
+#### Intersection
+
+```text
+A     B       A ∧ B       A ∧ B
+-------∧i    ------∧e1   ------∧e2
+ A ∧ B          A           B
+```
+
+```text
+h : A ∧ B
+
+-----h    -----h
+A ∧ B     A ∧ B
+-----∧e2  ------∧e1
+B         A
+-----------∧i
+B ∧ A
+```
+
+#### Union
+
+```text
+ A                 B
+-----∨iL (LEFT)  -----∨iR (RIGHT)
+A ∨ B            A ∨ B
+```
+
+```text
+         -hA  -hB
+         A    B
+-----P   .    .
+A v B    C    C
+---------------ve[h1|h2]
+     C
+
+(P : DESTRUCT P AS [H1|H2])
+```
+
+#### Implication
+
+```text
+
+-h1 -h2 -h3
+...........
+    ---h
+     P
+     .
+     Q
+----------i[h] (INTRO)
+  P -> Q
+```
+
+```text
+P -> Q     P
+------------ -> e
+     Q
+```
+
+```text
+   -hi
+   A
+------i[hi]
+A -> A
+```
+
+```text
+-----h
+A v B
+          -h2       -h1
+          A         B
+          .         .
+-----h  -----∨iR  -----∨iL
+A ∨ B   B v A     B ∨ A
+---------------------- ->i[h]
+A v B -> B v A
 ```
