--- a/PF/CM/2.md
+++ b/PF/CM/2.md
@@ -1,4 +1,4 @@
-# Programmation Fonctionnelle - II
+# PF 2 - Évaluations, exceptions et ordre supérieur
 
 ## 3. Évaluations et exceptions
 
@@ -48,3 +48,7 @@ let somme = fun l ->
 ```
 
 **Application.** Tester ses programmes : `let _ = assert (f entree = resultat)`
+
+## 4. Typage, polymorphisme, ordre supérieur
+
+Slides : <http://www-verimag.imag.fr/~wack/PF/Cours04.pdf>
