--- a/PS/CM/1.md
+++ b/PS/CM/1.md
@@ -1,4 +1,4 @@
-# Probabilités et Simulations - 1
+# PS 1 - Espace continu, espérance et variance
 
 Etherpad : <http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19>
 
@@ -327,8 +327,3 @@ $$
 $$
 P(A | B) = P(B | A)
 $$
-
-
-
-
-.
