--- a/PS/CM/2.md
+++ b/PS/CM/2.md
@@ -1,4 +1,4 @@
-# Probabilités et Simulations - 2
+# PS 2 - Génération aléatoire
 
 ## PRNG
 
@@ -160,6 +160,3 @@ A - e^{-\lambda t} = u & \Leftrightarrow & 1 - u = e^{-\lambda t}\\
 & \Leftrightarrow & t = {\ln(1-u) \over -\lambda}\\
 \end{array}
 $$
-
-
-.
