--- a/RO/CM/1.md
+++ b/RO/CM/1.md
@@ -1,4 +1,4 @@
-# Cours de recherche opérationnelle - I
+# RO 1 - Programmation linéaire
 
 Responsable cours : Nadia Brauner (<nadia.brauner@imag.fr>)
 
@@ -74,6 +74,3 @@ Forme standard :
 - maximisation
 - toutes les variables sont non négatives
 - toutes les contraintes sont des équations du type "$$=$$"
-
-
-.
