--- a/RO/CM/2.md
+++ b/RO/CM/2.md
@@ -1,4 +1,4 @@
-# Cours de recherche opérationnelle - II
+# RO 2 - Dualité
 
 ## Dualité
 
@@ -22,5 +22,3 @@ variable $$in \mathbb{R}$$ |      contrainte $$=$$
 - **Dualité faible** : pour faire la preuve d’optimalité
 - **Écarts complémentaires** : pour trouver une solution optimale du dual connaissant une solution optimale du primal
 - **Dualité forte** : garantit qu’une preuve d’optimalité (utilisant la dualité) est possible
-
-.
