--- a/SE/CM/1.md
+++ b/SE/CM/1.md
@@ -1,4 +1,6 @@
-# Programmation Concurrente / Systèmes d'exploitation
+# SE 1 - Cours
+
+Programmation Concurrente / Systèmes d'exploitation
 
 ## 0. Informations
 
@@ -289,6 +291,3 @@ T1:leave() | -1       | T4 (T3 -> ReadyQueue)
 ## 7. Système de gestion de fichiers
 
 ## 8. Gestion de la mémoire secondaire
-
-
-.
