--- a/TR/CM/1.md
+++ b/TR/CM/1.md
@@ -1,8 +1,8 @@
-# Technologie des Réseaux - 1
+# TR 1 - Modèle en couches, modèle OSI
+
+Technologie des Réseaux
 
 Responsable : Olivier.Richard@imag.fr
-
-## Modèle en couches / modèle OSI
 
 **OSI** : *Open Systems Interconnection*
 
@@ -23,9 +23,9 @@ Physique          | Ethernet  | 1
 
 > L1, L2, L3... = Layer 1, Layer 2, Layer 3...
 
-### IP (Internet protocol)
+## IP (Internet protocol)
 
-#### Généralités
+### Généralités
 
 - **1970.** réseau **Arpanet**
 - **Années 80-90.** IP s'impose
@@ -34,14 +34,14 @@ Physique          | Ethernet  | 1
 
 IP joue un rôle de protocole d'unification (IP/Ethernet, IP/Numéris, IP/X25, IP/ADSL)
 
-#### IPv4
+### IPv4
 
 Il assure un service de délivrance de datagramme :
 
 - **sans connexion** $$\rightarrow$$ chaque datagramme va être traité indépendamment
 - **non-fiable** $$\rightarrow$$ aucune garantie d'arrivée (ni l'émetteur, ni le récepteur ne sont tenus informé de la perte de datagramme)
 
-##### Adressage
+#### Adressage
 
 - 1 adresse par carte réseau : 32 bits/4 octets, notation décimale pointée
 - 5 classes : bits de poids forts
@@ -74,19 +74,19 @@ Masque de "sous" réseau variable
 
 ```text
 Notation "normale" :
-      195.        4.        5.       65    -> adresse
+      1.          4.        5.       65    -> adresse
 1100 0011.0000 0100.0000 0101.0100 0001    -> binaire
 
-      255.      255.      255.      192    -> masque réseau
+      1.        255.      255.      192    -> masque réseau
 1111 1111.1111 1111.1111 1111.1100 0000    -> binaire
 ```
 
 ```text
 Notation CIDR :
-      195.        4.        5.       65/26 -> nombre de 1 spécifiant le netmask
+      1.          4.        5.       65/26 -> nombre de 1 spécifiant le netmask
 ```
 
-##### Routage
+#### Routage
 
 Le routage est la fonctionnalité principale de la couche IP. C'est une fonction d'aiguillage $$\rightarrow$$ Sur quel port envoyer le datagramme IP.
 
@@ -102,9 +102,9 @@ Destination     | Gateway
 ****            | @IP_R1
 ```
 
-### UDP & TCP
+## UDP & TCP
 
-#### Notion de **port**
+### Notion de **port**
 
 **NIC.** _Network Interface Card_
 
@@ -123,7 +123,7 @@ Adresse IP (\@IP) $$\rightarrow$$ désigne une machine / un équipement / une NI
 
 Une "association" entre 2 applications peut être définie de manière _unique_ par le quadruplet \@IP\_SRC, \@IP\_DST, Port\_SRC, Port\_DST (+ "type" de protocole).
 
-#### UDP (_User Datagram Protocol_)
+### UDP (_User Datagram Protocol_)
 
 **Définition.** Communication avec un minimum de fonctionnalités : pas de contrôle d'arrivée ni de contrôle de séquencement, etc. $$\simeq$$ "IP + numéro de port"
 
@@ -137,7 +137,7 @@ Longueur | Checksum
       Données
 ```
 
-#### TCP (_Transmission Control Protocol_)
+### TCP (_Transmission Control Protocol_)
 
 **Définition.** Transfert fiable sur connection avec :
 
@@ -175,7 +175,7 @@ Depl | // | Flags |      Fenêtre
   - **Fenêtre.** Nombre d'octets que l'émetteur du message peut encore recevoir (place dans le buffer de réception) = **contrôle de flux**
   - **Options.** (MSS = _Maximum Segment Size_) $$\rightarrow$$ souvent trame max Ethernet
 
-#### Ouverture de connexion
+### Ouverture de connexion
 
 Rôle dissymétrique des 2 entités communicantes :
 
@@ -188,30 +188,30 @@ Le serveur autorise l'ouverture **passive** de connexion ("vue OS") et le client
 
 > Une ouverture de connexion "consomme" 1 ACK
 
-#### Fin de connexion
+### Fin de connexion
 
 Effectuée par n'importe quelle extrémité, elle se compose de 2 demandes de fermeture.
 
 ![Chronogramme fin de connexion](img/1_fin.jpg)
 
-#### Transfert de données
+### Transfert de données
 
 ![Chronogramme transfert de données](img/1_transfert.jpg)
 
-#### Gestion des erreurs
+### Gestion des erreurs
 
 Les erreurs sont détectées par l'absence d'acquittement positif à l'expiration d'un temporisateur (timer) : "toutes" les données reçues hors séquence sont mémorisées.
 
 <!-- TODO ![Chronogramme erreur](img/1_erreur.jpg) -->
 
-#### Adaptation à l'environnement
+### Adaptation à l'environnement
 
 TCP a été conçu pour s'adapter aux :
 
 - **réseaux locaux** (LAN) : latence faible / débit élevé
 - **réseaux longues distances** (WAN) : latence élevée / débit variable
 
-#### Gestion des temporisateurs
+### Gestion des temporisateurs
 
 Leur valeur impacte les performances (latence, débit, usage du réseau).
 
@@ -249,7 +249,7 @@ $$
 
 **Retard d'acquittement.** On retarde l'envoi d'ACK pour favoriser le regroupement de messages. En pratique, le retard est en dizaines de millisecondes. On envoie toujours 3 messages pour 2 octets utiles.
 
-#### Algorithme de Nayle
+### Algorithme de Nayle
 
 > Importance de limiter le nombre de petits messages :
 >
@@ -264,7 +264,7 @@ Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le rés
 
 - Utilisation du champ `fenetre` de l'entête TCP indiquant la place restante de l'émetteur du message.
 
-#### Mécanisme de fenêtre glissante
+### Mécanisme de fenêtre glissante
 
 <!-- TODO ![Chronogramme erreur](img/1_fenetre-glissante.jpg) -->
 
@@ -272,13 +272,13 @@ Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le rés
 
 **Fenêtre vide.** Lorsque E (émetteur) reçoit ACK = N et WIN = 0, E stoppe l'émission et teste périodiquement la fenêtre de R (récepteur) : première tentative en 5 secondes avec 1 paquet de 1 octet, puis double le temps jusqu'à 1 minute. Tant que R ne peut recevoir (R $$\rightarrow$$ ACK=N et WIN=0)
 
-#### Syndrome de la fenêtre stupide (*ou silly window*)
+### Syndrome de la fenêtre stupide (*ou silly window*)
 
 Si B annonce une petite fenêtre (suite à une faible consommation de données des couches supérieures) l'émette émet (avec une forte probabilité) un nouveau petit message qui fait redescendre WIN = 0. Cela implique une sous-utilisation du réseau et la multiplication des petits messages, **à éviter**.
 
 **Solution.** Après l'émission de WIN = 0, l'émetteur doit attendre d'avoir assez de place pour envoyer un acquittement pour envoyer un ACK avec WIN=seuil (seuil fonction de MSS et de la mémoire allouée par connection)
 
-#### Maîtrise de congestion réseau
+### Maîtrise de congestion réseau
 
 - **Problème.** Une machine peut annoncer une grande fenêtre qui dépasse les capacités du réseau traversé. Peut provoquer des pertes de paquets au niveau des routeurs.
 - **Proposition.** Chaque machine maintient une **fenêtre de congestion** (FC) pour estimer la capacité du réseau.
@@ -291,15 +291,8 @@ Si B annonce une petite fenêtre (suite à une faible consommation de données d
   - Début slow-start puis évolution linéaire à partir d'un seuil. Croissance exponentielle de FC du début d'émission.
   - Perte de messages : FC = FC/2. Plusieurs versions existent : Tahoe, Réno, Vega.
 
-#### Adaptation par le réseau
+### Adaptation par le réseau
 
 **Observation.** Oscillation lors de la détection de congestion car tout les équipements terminaux détectent en même temps : baisse forte puis remontée de charge.
 
 **Proposition.** Introduire la notion de routeur actif. RED = *Random Early Detection*. Le routeur surveille le taux d'occupation de ses files d'attentes. Si $$\text{charge} > \text{seuil}_\text{fixé}$$ alors destruction aléatoire de paquets $$\rightarrow$$ détection de congestion anticipée pour certaines connections.
-
-
-
-
-
-
-.
