--- a/CC/CM/2.md
+++ b/CC/CM/2.md
@@ -1,4 +1,4 @@
-# Complexité algorithmique - 2
+# CC 2 - Complexité et cheminements
 
 ## Complexité
 
@@ -54,5 +54,3 @@ $$
 
 - **Cycle.** Chaîne simple dont les deux extrémités sont le même sommet.
 - **Cycle élémentaire.** Chaque sommet apparaît une seule fois (sauf les extrémités)
-
-.
