--- a/RO/CM/3.md
+++ b/RO/CM/3.md
@@ -1,4 +1,4 @@
-# RO - Programmation linéaire en nombres entiers
+# RO 3 - Programmation linéaire en nombres entiers
 
 Slides : <https://caseine.org/mod/resource/view.php?id=735>
 
@@ -15,10 +15,3 @@ Slides : <https://caseine.org/mod/resource/view.php?id=735>
   - Avec $$M \geq x+1$$ et $$M \geq y+1$$ et $$b \in \{0, 1\}$$
   - $$x+1 \leq y + Mb$$
   - $$y+1 \leq x + M(1-b)$$
-
-
-
-
-
-
-.
