--- a/CC/CM/1.md
+++ b/CC/CM/1.md
@@ -8,7 +8,7 @@ Auteure diapo : <Nadia.Brauner@imag.fr>
 
 Site intéressant : <https://pagesperso.g-scop.grenoble-inp.fr/~stehlikm/>
 
-> *Partiel avant les vacances de la Toussaint*
+> *Partiel vers les vacances de la Toussaint*
 
 ## Notions de base sur les graphes
 
@@ -24,7 +24,7 @@ Site intéressant : <https://pagesperso.g-scop.grenoble-inp.fr/~stehlikm/>
 - Arête **incidente**.
 - Sommet **voisin** ou adjacent.
 - **Voisinage** d'un sommet. Ensemble de ses voisins.
-- $$G$$ est **$$K$$-régulier** si $$d(v) = K \forall v \in V$$.
+- $$G$$ est **$$K$$-régulier** si $$d(v) = K, \forall v \in V$$.
 
 **Théorème.** Soit $$G = (V, E)$$ un graphe. Alors, $$\sum\limits_{v \in V} d(v) = 2|E|$$.
 
