--- a/CC/CM/2.md
+++ b/CC/CM/2.md
@@ -15,9 +15,9 @@ Varie en fonction de la **taille de l'entrée** (espace mémoire) :
 
 ## Cheminements
 
-### Chaînes
-
 Transparents : <https://caseine.org/mod/resource/view.php?id=2253>
+
+### Chaînes
 
 - **Chaîne.** Séquence alternée de sommets et d'arêtes.
 - **Chaîne simple.** Pas de répétition d’arêtes.
@@ -34,7 +34,7 @@ Un graphe est **connexe** ssi pour toute paire de sommets, il existe dans le gra
 Soit un graphe d'ordre $$n_0 + 1$$ *(graphe d'une preuve par induction)*
 
 $$
-\sum\limits{x \in V(G)} \text{deg}(x) = 2|E(G)| \ge 2|V(G)| = 2(n_0 + 1)
+\sum\limits_{x \in V(G)} \text{deg}(x) = 2|E(G)| \ge 2|V(G)| = 2(n_0 + 1)
 $$
 
 ### Accessibilité
@@ -50,7 +50,14 @@ $$
   - S est géré comme une pile (**LIFO**)
   - priorité aux sommets entrés en dernier dans S
 
+Soient $$s$$ et $$t$$ deux sommets, $$S \subset V$$ est une **$$st$$-coupe** si $$s \in S$$ et $$t \notin S$$.
+
+- Si $$S$$ est une $$st$$-coupe alors chaque chaîne de $$s$$ à $$t$$ contient au moins une arête de co-cycle($$S$$).
+- Si on a une famille de $$k$$ $$st$$-coupes de co-cycles deux à deux disjoints, alors une plus courte chaîne de $$s$$ à $$t$$ a une longueur supérieure à $$k$$.
+
 ### Cycles
 
 - **Cycle.** Chaîne simple dont les deux extrémités sont le même sommet.
 - **Cycle élémentaire.** Chaque sommet apparaît une seule fois (sauf les extrémités)
+
+**Existence d'un cycle.** Si dans un graphe $$G$$ tout sommet est de degré supérieur ou égal à 2, alors $$G$$ possède au moins un cycle.
