--- a/CC/CM/3.md
+++ b/CC/CM/3.md
@@ -10,12 +10,12 @@ Slides : <https://caseine.org/mod/resource/view.php?id=3518>
 
 **Propriétés.** Un graphe est eulérien ssi :
 
-- Graphe connexe
-- Nombre d'arêtes pair
+- Ce graphe est connexe
+- Le degré de tous ses sommets est pair
 
 ### Graphes hamiltoniens
 
-**Cycle eulérien.** Un cycle qui emprunte chaque **sommet** du graphe une et une seule fois.
+**Cycle hamiltonien.** Un cycle qui emprunte chaque **sommet** du graphe une et une seule fois.
 
 ## Arbres
 
@@ -33,15 +33,15 @@ Slides : <https://caseine.org/mod/resource/view.php?id=2375>
 
 Soit $$T$$, un graphe d’ordre $$n$$. Deux des propriétés suivantes impliquent la troisième.
 
-1/ $$T$$ est connexe
-2/ $$T$$ a $$n - 1$$ arêtes
-3/ $$T$$ est acyclique
+1. $$T$$ est connexe *($$\Rightarrow$$ a au moins $$n - 1$$ arêtes)*
+2. $$T$$ a $$n - 1$$ arêtes
+3. $$T$$ est acyclique *($$\Rightarrow$$ a au plus $$n - 1$$ arêtes)*
 
 Les trois propositions suivantes sont équivalentes.
 
 - $$T$$ est un arbre
-- connexe minimal : la suppression de toute arête le déconnecte
-- acyclique maximal : l’ajout de toute arête crée un cycle
+- **connexe minimal** : la suppression de toute arête le déconnecte
+- **acyclique maximal** : l’ajout de toute arête crée un cycle
 
 **Théorème.** Soit G acyclique ayant au moins une arête, alors G admet au moins deux sommets de degré 1.
 
