--- a/CC/CM/4.md
+++ b/CC/CM/4.md
@@ -16,10 +16,23 @@ Slides : <https://caseine.org/mod/resource/view.php?id=3574>
 
 **MST.** Arbre couvrant de poids minimum (*Minimum Spanning Tree*)
 
-Les algorithmes :
+**Coupe.** Une coupe $$S$$ donne une partition de $$V$$ en $$(S, V \backslash S)$$
 
-- [Kruskal][2122cfe2]. *Union-Find*
+Une coupe $$S$$ **respecte** ensemble d’arêtes $$A$$ si aucune arête de $$A$$ n’appartient au co-cycle de $$S$$
+
+$$e$$ est une **arête légère** qui traverse une coupe $$S$$ si :
+
+- $$e$$ appartient au co-cycle de $$S$$ et
+- $$e$$ est de plus petit poids parmi les arêtes du co-cycle de $$S$$
+
+**Algorithmes glouton.** On va construire l’arbre couvrant petit à petit, en s’assurant à chaque étape qu’il reste :
+
+- [Kruskal][2122cfe2] (*union-find*)
+	- Graphe couvrant sans cycle
+	- *Arête valide = arête de plus petit poids qui connecte deux composantes connexes de $$G_A$$*
 - [Prim][4400d2df]
+	- Graphe connexe sans cycle
+	- *Arête valide = arête la plus légère entre les sommets couverts par $$A$$ et les sommets non couverts par $$A$$*
 
   [2122cfe2]: https://fr.wikipedia.org/wiki/Algorithme_de_Kruskal "Algorithme de Kruskal sur Wikipédia"
   [4400d2df]: https://fr.wikipedia.org/wiki/Algorithme_de_Prim "Algorithme de Prim sur Wikipédia"
@@ -33,15 +46,18 @@ Slides : <https://caseine.org/mod/resource/view.php?id=3748>
 - **Sous-graphe engendré par $$A$$.** Graphe obtenu en ne conservant que les sommets de A et les arcs les reliant.
 - **Arbre couvrant.** Arbre inclus dans un graphe et qui connecte tous ses sommets.
 - **Graphe complet.** Graphe dont tous les sommets sont adjacents.
-- **Stable d’un graphe.** Ensemble de sommets deux à deux non adjacents.
+- **Stable.** Un graphe est stable ssi il n'a aucune arête.
+- **Stable d’un graphe.** Sous-graphe engendré stable (exemple : sommets de même couleur).
 - **Clique.** Sous-graphe complet.
+- $$\omega(G)$$. Nombre de sommets maximum d'une clique de $$G$$.
+- $$\alpha(G)$$. Nombre de sommets maximum d'un stable de $$G$$.
 
 ### Graphes bipartis
 
 $$G = (V, E)$$ est **biparti** ssi $$\exists A \subseteq V, B \subseteq V$$ tels que :
 
 - $$A \cup B = V$$ et
-- $$A \cap B = \empty$$ et
+- $$A \cap B = \emptyset$$ et
 - $$G[A]$$ et $$G[B]$$ stables.
 - Ou bien il ne contient pas de cycle élémentaire impair comme sous-graphe.
 
@@ -58,9 +74,9 @@ Colorations particulières :
 - 4 couleurs : cartes géographiques avec les frontières
 - n couleurs (n sommets) : graphes complets
 
-**Nombre chromatique.** Nombre de couleurs tel qu'il n'existe pas de coloration du graphe avec moins de couleurs.
+**Nombre chromatique.** $$\chi(G)$$ est le nombre de couleurs tel qu'il n'existe pas de coloration du graphe avec moins de couleurs.
 
-**Théorème.** Soit $$G = (V, E)$$ un graphe. On a $$\omega (G) \leq \chi(G) \leq \Delta (G) + 1$$ avec $$∆(G)$$, le degré maximum de $$G$$ et $$ω(G)$$ est le nombre maximum de sommets d’une clique de $$G$$.
+**Théorème.** Soit $$G = (V, E)$$ un graphe. On a $$\omega (G) \leq \chi(G) \leq \Delta (G) + 1$$ avec $$\Delta(G)$$, le degré maximum de $$G$$ et $$\omega(G)$$ est le nombre maximum de sommets d’une clique de $$G$$.
 
 *Exemples de bornes.*
 
