--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -19,7 +19,7 @@ Slide : <http://iihm.imag.fr/blanch/INFO4/IHM/cours/1-evenements.pdf>
 
 Types d'évènements (noms dépendent du système) : KeyPress, KeyRelease, etc.
 
-Automate : $$E \\times S \\rightarrow S$$ (**\*E**vent\* et **\*S**tate\*)
+Automate : $$E \times S \rightarrow S$$ (**\*E**vent\* et **\*S**tate\*)
 
 **Boucle REPL** : _read-eval-print loop_
 
