--- a/LT/TD/1/1.md
+++ b/LT/TD/1/1.md
@@ -5,7 +5,7 @@
 ### Nombres naturels
 
 $$
-ExpN := n (\mathbb{N})\; |\; ExpN \oplus ExpN\; |\; ExpN \ominus ExpN\; |\; ExpN \otimes ExpN\; |\; \empty
+ExpN := n (\mathbb{N})\; |\; ExpN \oplus ExpN\; |\; ExpN \ominus ExpN\; |\; ExpN \otimes ExpN\; |\; \emptyset
 $$
 
 1. Écrire une fonction récursive d'évaluation ExpN $$\rightarrow$$ $$\mathbb{N}$$
@@ -66,7 +66,7 @@ $$
 2. Étendre ExpN pour avoir "si... alors... sinon...".
 
   $$
-  ExpN := \dots | \text{ si } ExpB \text{ alors } ExpN \text{ sinon } ExpN
+  ExpN := \cdots | \text{ si } ExpB \text{ alors } ExpN \text{ sinon } ExpN
   $$
 
 3. Étendre l'évaluation (evalB).
