--- a/RO/CM/2.md
+++ b/RO/CM/2.md
@@ -10,12 +10,12 @@ Illustration avec un vendeur de comprimés de vitamines A et C VS une famille qu
 :-------------------------:|:-------------------------:
           primal           |            dual
            dual            |           primal
-     variable $$≥ 0$$      |      contrainte $$≤$$
+     variable $$\geq 0$$      |      contrainte $$\leq$$
 variable $$in \mathbb{R}$$ |      contrainte $$=$$
-     variable $$≤ 0$$      |      contrainte $$≥$$
-     contrainte $$≤$$      |      variable $$≤ 0$$
+     variable $$\leq 0$$      |      contrainte $$\geq$$
+     contrainte $$\leq$$      |      variable $$\leq 0$$
      contrainte $$=$$      | variable $$in \mathbb{R}$$
-     contrainte $$≥$$      |      variable $$≥ 0$$
+     contrainte $$\geq$$      |      variable $$\geq 0$$
 
 ### Trois théorèmes de dualité
 
