--- a/RO/CM/3.md
+++ b/RO/CM/3.md
@@ -4,7 +4,7 @@ Slides : <https://caseine.org/mod/resource/view.php?id=735>
 
 ## Techniques générales de modélisation
 
-- **Restriction à un ensemble discret de valeur.** $$x$$doit prendre sa valeur dans $$\{P_1, p_2, \dots, p_k\}$$
+- **Restriction à un ensemble discret de valeur.** $$x$$doit prendre sa valeur dans $$\{P_1, p_2, \cdots, p_k\}$$
   - $$y_i = 1$$ si $$x = p_i$$, $$y_i = 0$$ sinon.
   - $$x = \sum_{i = 1}^k p_iy_i$$ et $$\sum_{i = 1}^k y_i = 1$$
 - **Seuil.** Si $$x > 0$$ alors $$x \geq K$$ avec $$K$$ donné.
