--- a/TR/TP/2/2.md
+++ b/TR/TP/2/2.md
@@ -5,23 +5,23 @@
 # 1. Établissement d'une connexion
 
 - Lors de l’établissement de la connexion, trois paquets sont échangés :
-• [SYN] : demande de connexion de M11 à M32
-• [SYN, ACK] : acceptation de M32
-• [ACK] : acquittement de M11
+  - [SYN] : demande de connexion de M11 à M32
+  - [SYN, ACK] : acceptation de M32
+  - [ACK] : acquittement de M11
 
 - Lors de l'ouverture de connexion, TCP utilise plusieurs options :
-• `End of option :` est un octet qui indique la fin de la partie option et le début de la partie data.
-• `No-Operation :` est un octet qui sert de padding.
-• `Maximum segment size :` définit la taille maximum de segment des paquets TCP sortants (de priorité en-dessous des bornes imposées par TCP).
-• `Window scale :` correspond au nombre d’octets à partir de la position marquée dans l’accusé de réception que le récepteur est capable de recevoir.
-• `Timestamps :` active ou désactive les timestamps et définit les offsets (aléatoires ou non).
-• `SACK permitted :` accusé de réception sélectif qui permet de connaître quels bouts de paquets ont été reçus et ainsi de ne retransmettre que les paquets non reçus.
+  - `End of option :` est un octet qui indique la fin de la partie option et le début de la partie data.
+  - `No-Operation :` est un octet qui sert de padding.
+  - `Maximum segment size :` définit la taille maximum de segment des paquets TCP sortants (de priorité en-dessous des bornes imposées par TCP).
+  - `Window scale :` correspond au nombre d’octets à partir de la position marquée dans l’accusé de réception que le récepteur est capable de recevoir.
+  - `Timestamps :` active ou désactive les timestamps et définit les offsets (aléatoires ou non).
+  - `SACK permitted :` accusé de réception sélectif qui permet de connaître quels bouts de paquets ont été reçus et ainsi de ne retransmettre que les paquets non reçus.
 
 # 2. Étude de la récupération d'erreur
 
 ## 2.1. Numéro de séquence et d'acquittement
 
-TODO croquis temporel avec SYN et ACK.
+![Croquis temporel](img/croquis.png)
 
 - Le `sequence number` permet d’identifier les demandes de connexion et de numéroter les octets de données. Le `ack.number` est le numéro de séquence du dernier octet bien arrivé, il permet à l’émetteur de savoir si le récepteur à bien reçu toutes les données ou s’il doit renvoyer des paquets non reçus.
 - Il n'y a pas forcément un acquittement par paquet, cela permet d'envoyer moins de paquets en acquittant plusieurs paquets en même temps.
@@ -50,7 +50,7 @@ Pour 10 000 octets:
 
 ## 2.6. Fenêtre à anticipation et buffer d'émission
 
-TODO Insérer la photo de la courbe
+![Courbe](img/2-6.png)
 
 - On peut voir sur le graphe ci-dessus 2 courbes. La courbe marron correspond aux paquets émis et acquitté tandis que la courbe verte correspond aux paquet lu par le récepteur.
 En effet on peut voir que la courbe verte démarre aux environs du numéro de séquence 65 000 qui correspond à la taille du buffer de réception.
@@ -63,8 +63,6 @@ Sur la courbe la fenêtre d'anticipation est représenté par les points bleus q
 
 - On retrouve l'influence de la taille du buffer d'émission dans cette courbe au niveau de la taille des "marches" de la courbe marron qui sont toujours d'environ 10 000 numéros de séquence ce qui correspond à la taille du buffer.
 
-\newpage
-
 ### 2.6.1. Influence de la taille du buffer d'émission sur le débit applicatif
 
 - Comme on limite la taille à 1460 l’émetteur est obligé d'envoyer 2 paquets pour transmettre les 1460 octets, on remarque qu'il envoie à chaque fois 2 paquets de 1448 et un paquet de 24 qui contient donc les 12 octets restant de chaque paquet de 1448. Puis on peut observer les acquittements des 3 paquets.
@@ -75,10 +73,8 @@ Sur la courbe la fenêtre d'anticipation est représenté par les points bleus q
   - On divise la durée calculée précédemment par par le nombre de messages : **50,9318 / 10 = 5,0939 s**
   - On divise le nombre d'octets de chaque message par le temps précédent (temps que mettrait l'ordinateur à envoyer la taille du buffer) et on multiplie par 8 pour avoir le résultat en bits : **1460 / 5,0939 * 8 = 2 292,939 bits/s = 2,293 kbits/s**
 - *Même expérience avec un buffer...*
-  - *... de 3000 octets*
-  - De la même manière que précédemment on trouve un débit applicatif de : **3000 / 0,0188 * 8 = 1 276 595 bits/s = 1 276,595 kbits/s**
-  - *... de 10 000 octets*
-  - De la même manière que précédemment on trouve un débit applicatif de : **10 000 / 0.0224696 * 8 = 3 560 366 bits/s = 3 560,366 kbits/s**
+  - *... de 3000 octets* : de la même manière que précédemment on trouve un débit applicatif de : **3000 / 0,0188 * 8 = 1 276 595 bits/s = 1 276,595 kbits/s**
+  - *... de 10 000 octets* : de la même manière que précédemment on trouve un débit applicatif de : **10 000 / 0.0224696 * 8 = 3 560 366 bits/s = 3 560,366 kbits/s**
 - Plus le buffer d'émission est grand plus le débit est grand, tant que le buffer d'émission est inférieur au buffer de réception, si ça fait trop pour le récepteur.
 
 - Pour trouver la taille optimale du buffer d’émission on fait le calcul suivant :
@@ -101,12 +97,16 @@ Sur la courbe la fenêtre d'anticipation est représenté par les points bleus q
 
 ## 2.7. Cas de pertes dans la fenêtre à anticipation
 
+*Nous n'avons pas eu le temps de faire cette partie.*
+
+<!--
 - TODO
 - TODO
 - TODO
 - TODO
 - TODO
 - TODO
+-->
 
 # 3. Contrôle de flux
 
