PS - Corrections CM + TD

--- a/PS/CM/1.md
+++ b/PS/CM/1.md
@@ -1,4 +1,4 @@
-# PS 1 - Espace continu, espérance et variance
+# PS 1 - Espaces probabilistes
 
 Etherpad : <http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19>
 
@@ -8,17 +8,17 @@ $$
 
 ## Rappels
 
-- Univers des évènements : $$\Omega = \{\omega_1, \omega_2, \omega_3, \dots\}$$
+- Univers des évènements : $$\Omega = \{\omega_1, \omega_2, \omega_3, ...\}$$
 - Évènement $$A \in \Omega$$
 - $$\mathcal{A}$$ : tous les $$A$$ considérés
 - $$\mathbb{P} = \begin{array}{l}
-    \mathcal{A} & \rightarrow & [0, 1]]\\
+    \mathcal{A} & \rightarrow & [0, 1]\\
     A & \mapsto & \mathbb{P}[A]
 \end{array}$$
 - $$\mathbb{P}(\Omega) = 1$$
-- $$\mathbb{P}(\empty) = 0$$
+- $$\mathbb{P}(\emptyset) = 0$$
 - $$\mathbb{P}(A \cup B) = \mathbb{P}(A) + \mathbb{P}(B) - \mathbb{P}(A \cap B)$$
-- 2 dés 6 : $$\Omega = \{(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), \dots, (6, 6)\}$$
+- 2 dés 6 : $$\Omega = \{(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), ..., (6, 6)\}$$
   - Probabilité qu'on ait un double : $$\forall v \in \Omega : \mathbb{P}(v) = {1 \over |\Omega|} = {1 \over 36}$$
 
 ## Zombie Dice
@@ -78,26 +78,26 @@ Espérance (*expected value*) :
 
 *Exemple.* Prenons un dé 6.
 
-- $$"\Omega" = \{\cdot, \cdot\cdot, \dots, \cdots\cdots\}$$
+- $$"\Omega" = \{\cdot, \cdot\cdot, \cdots, \cdots\cdots\}$$
 - $$X(\Omega) = \{1, 2, 3, 4, 5, 6\}$$
 - $$\mathbb{P}(X=k) = \left\{\begin{array}{lcl}
-    1/6 \text{ si } k \in \{1, 2, \dots, 6\}\\
+    1/6 \text{ si } k \in \{1, 2, ..., 6\}\\
     0 \text{ sinon}
     \end{array}\right.$$
 - $$\begin{array}{lcl}
-  \mathbb{E}(X) & = & {1 \over 6} \times 1 + {1 \over 6} \times 2 + \cdots + {1 \over 6} \times 6\\
-  & = & {1 \over 6} \times (1 + 2 + \cdots + 6)\\
+  \mathbb{E}(X) & = & {1 \over 6} \times 1 + {1 \over 6} \times 2 + ... + {1 \over 6} \times 6\\
+  & = & {1 \over 6} \times (1 + 2 + ... + 6)\\
   & = & {21 \over 6} = {7 \over 2}\\
   \end{array}$$
 
 *Exemple.* Prenons deux dés 6.
 
-- $$"\Omega" = \{(a, b) | a \in \{1, \dots, 6\} \text{ et } b \in \{1, \dots, 6\}\}$$
-- $$X(\Omega) = \{2, 3, \dots, 12\}$$
-- $$\mathbb{P}(X=k) = \{{1 \over 36}, {2 \over 36}, {3 \over 36}, \dots, {6 \over 36}, {5 \over 36}, \dots, {1 \over 36}\}$$
+- $$"\Omega" = \{(a, b)\; |\; a \in \{1, ..., 6\} \text{ et } b \in \{1, ..., 6\}\}$$
+- $$X(\Omega) = \{2, 3, ..., 12\}$$
+- $$\mathbb{P}(X=k) = \{ {1 \over 36}, {2 \over 36}, {3 \over 36}, ..., {6 \over 36}, {5 \over 36}, ..., {1 \over 36}\}$$
 - $$\sum = {1 \over 36}(1+2+3+4+5+6+5+4+3+2+1) = {1 \over 36}(15 + 6 + 15) = 1$$
 - $$\begin{array}{lcl}
-  \mathbb{E}(X) & = & {1 \over 36} \times (1 \times 2 + 2 \times 3 + \dots + 5 \times 6 + 6 \times 7 + 8 \times 5 + \dots + 12 \times 1)\\
+  \mathbb{E}(X) & = & {1 \over 36} \times (1 \times 2 + 2 \times 3 + ... + 5 \times 6 + 6 \times 7 + 8 \times 5 + ... + 12 \times 1)\\
   \end{array}$$
 
 
@@ -112,7 +112,7 @@ Espérance (*expected value*) :
 
 - $$\begin{array}{lcl}
   \mathbb{E}(X) & = & {1 \over 36} \times 10^6 - {35 \over 36} \times 10^4\\
-  & \approx & 18000€
+  & \approx & 18000 \text{Euros} \\
   \end{array}$$
 
 
@@ -274,7 +274,7 @@ $$
 - Le cheval 2 devant le cheval 3 : $$B = \{1, 2, 3\}, \{2, 1, 3\}, \{2, 3, 1\}$$
 - $$P(A) = {1 \over 3}$$, $$P(B) = {1 \over 2}$$
 - $$A$$ et $$B$$ sont indépendants : $$P(A, B) = P(A \cap B) = {1 \over 3} \times {1 \over 2} = {1 \over 6}$$
-- $$A_1 \dots A_n$$ mutuellement indépendants si pour tout sous-ensemble de $$A_1 \dots A_n$$, $$P(\cap) = \prod \text{Proba}$$
+- $$A_1 ... A_n$$ mutuellement indépendants si pour tout sous-ensemble de $$A_1 ... A_n$$, $$P(\cap) = \prod \text{Proba}$$
 
 *Exemple.* $$n = 3$$ : $$A_1, A_2, A_3$$
 
@@ -287,7 +287,7 @@ Si $A_1, A_2, A_3$ indépendantes, alors
 
 > $$P(A_1 \cap A_2 \cap A_3 = P(A_1) . P(A_2) . P(A_3)$$ ne suffit pas.
 >
-> Pas transitive. $A \text{ indep } B$ et $B \text{ indep } C !\Rightarrow A \text{ indep } C$
+> Pas transitive. $A\; \text{indep } B$ et $B\; \text{indep } C !\Rightarrow A\; \text{indep } C$
 >
 > L'indépendance pair à pair ne suffit pas
 
@@ -299,24 +299,25 @@ Si $A_1, A_2, A_3$ indépendantes, alors
 
 **Définition.** Probabilité conditionnelle : $$P(A | B) = {P(A \cap B) \over P(B)}$$
 
-> $$A \text{ indep } B \Leftrightarrow P(A | B) = P(A)$$
+> $$A\; \text{indep } B \Leftrightarrow P(A | B) = P(A)$$
+>
 > Preuve :
-> $$
-> \begin{array}{lcl}
-> A \text{ indep } B & \Leftrightarrow & P(A \cap B) = P(A) . P(B) \\
-> & \Leftrightarrow & {P(A \cap B) \over P(B)} = P(A) \\
-> \end{array}
-> $$
+ $$
+ \begin{array}{lcl}
+ A\; \text{indep } B & \Leftrightarrow & P(A \cap B) = P(A) . P(B) \\
+ & \Leftrightarrow & {P(A \cap B) \over P(B)} = P(A) \\
+ \end{array}
+ $$
 >
 > Indépendants $$P(A \cap B) = P(A) P(B)$$ $$\neq$$ disjoints $$P(A \cap B) = 0$$.
 
-*Exemple.* Calculer la probabilité que 1 arrive premier sachant que A arrive avant 2.$$
+*Exemple.* Calculer la probabilité que 1 arrive premier sachant que A arrive avant 2.
 
 $$
 P(A | B) = {P(A \cap B) \over P(B)} = {P(A) \over P(B)} = {2 / 6 \over 3 / 6} = {2 \over 3}
 $$
 
-**Formule des probabilités totales.** Soit $$B_1, \dots, B_n$$ **partition** de $$\Omega$$ : $$B_i \cap B_j = \empty \forall i \neq j$$ et $$\bigcup\limits_{i=1}^{n} = \Omega$$)
+**Formule des probabilités totales.** Soit $$B_1, ..., B_n$$ **partition** de $$\Omega$$ : $$B_i \cap B_j = \emptyset \forall i \neq j$$ et $$\bigcup\limits_{i=1}^{n} = \Omega$$)
 
 $$
 P(A) = \sum_{i = 1}^n P(A \cap B_i) = \sum_{i = 1}^n P(A | B_i)P(B_i)
