--- a/PS/CM/2.md
+++ b/PS/CM/2.md
@@ -60,8 +60,8 @@ Soit $$k \in \mathbb{N}$$,
 
 $$
 \begin{array}{lcl}
-P(X \in C, N = k) & = & P(X_1 \notin B_1, \cdots, X_{k-1} \\notin B, X_k \in C) \\
-& = & P(X_1 \notin B) P(X_2 \notin B) \cdots P(X_{k-1} \\notin B) P(X_k \in C) \\
+P(X \in C, N = k) & = & P(X_1 \notin B_1, \cdots, X_{k-1} \notin B, X_k \in C) \\
+& = & P(X_1 \notin B) P(X_2 \notin B) \cdots P(X_{k-1} \notin B) P(X_k \in C) \\
 & = & (1 - {|B| \over |A|})^{k - 1} \times {|C| \over |A|}
 \end{array}
 $$
@@ -115,11 +115,14 @@ On peut par exemple faire des "paliers" de "taille" proportionnelle à la probab
     - $$\mathbb{P}(N = k) = (1 - p)^{k-1}p$$
     - $$\mathbb{E}(N) = \sum\limits_{k=1}^{\infty} kp(1 - p)^{k-1} = {1 \over p}$$
 
-## Génération d'une loi à partir de la loi uniforme lorsque l'on connais la fonction de répartition
+## Génération à partir de la loi uniforme (lorsqu'on connaît la CDF)
+
+Génération d'une loi à partir de la loi uniforme lorsqu'on connaît la fonction de répartition.
 
 $$
 X = ? Y = F_X^{-1}(\mathcal{U}(0, 1))
 $$
+
 $$
 \begin{array}{lcl}
 P(Y \leq t) & = & P(F^{-1}_X(U) \leq t)\\
